While box added.

--- a/web/left_menu/left_menu.html
+++ b/web/left_menu/left_menu.html
@@ -34,8 +34,8 @@
       </collapse-menu>
       <collapse-menu id="if_switch_loop_menu" label="制御文" state="closed">
           <add-element-button id="loop1" label="もし---なら" command="If"></add-element-button>
-          <add-element-button id="loop2" label="そうでないなら" command="else"></add-element-button>
-          <add-element-button id="loop3" label="---の間、ずっと" command="while"></add-element-button>
+          <add-element-button id="loop2" label="そうでないなら" command="Else"></add-element-button>
+          <add-element-button id="loop3" label="---の間、ずっと" command="While"></add-element-button>
       </collapse-menu>
       <!--
                 <core-toolbar class="dark-primary-color text-primary-color"></core-toolbar>
