--- a/web/main_menu/boxes/flow_control/if_box.html
+++ b/web/main_menu/boxes/flow_control/if_box.html
@@ -33,7 +33,7 @@
                 <div end>なら</div>
             </div>
             <div id="content-block">
-                <div id="consequent-content"></div>
+                <div id="body-content"></div>
             </div>
         </div>
 
