--- a/web/main_menu/block_editor.html
+++ b/web/main_menu/block_editor.html
@@ -18,6 +18,7 @@
 <link rel="import" href="boxes/dataports/write_outport_box.html" />
 
 <link rel="import" href="boxes/flow_control/if_box.html" />
+<link rel="import" href="boxes/flow_control/while_box.html" />
 
 <!--
 <link rel="import" href="../elements/blocks/set_variable.html" />
