While box added.

--- a/web/main_menu/block_editor.html
+++ b/web/main_menu/block_editor.html
@@ -9,17 +9,11 @@
 <link rel="import" href="boxes/variables/refer_variable_box.html" />
 
 <link rel="import" href="boxes/literal/integer_literal_box.html" />
-<link rel="import" href="boxes/literal/true_literal_box.html" />
+<link rel="import" href="boxes/literal/bool_literal_box.html" />
 
-<link rel="import" href="boxes/dataports/read_inport_box.html" />
-<link rel="import" href="boxes/dataports/is_new_inport_box.html" />
-<link rel="import" href="boxes/dataports/outport_buffer_box.html" />
-<link rel="import" href="boxes/dataports/inport_buffer_box.html" />
-<link rel="import" href="boxes/dataports/write_outport_box.html" />
+<link rel="import" href="boxes/dataports/dataports.html" />
 
-<link rel="import" href="boxes/flow_control/if_box.html" />
-<link rel="import" href="boxes/flow_control/while_box.html" />
-
+<link rel="import" href="boxes/boxes.html" />
 <!--
 <link rel="import" href="../elements/blocks/set_variable.html" />
 <link rel="import" href="../elements/blocks/read_inport_box.html" />
