Use Library and part statements.

--- a/web/main_menu/boxes/boxes.html
+++ b/web/main_menu/boxes/boxes.html
@@ -7,3 +7,14 @@
 <link rel="import" href="dataports/is_new_inport_box.html" />
 <link rel="import" href="dataports/read_inport_box.html" />
 <link rel="import" href="dataports/write_outport_box.html" />
+
+<link rel="import" href="literal/integer_literal_box.html" />
+<link rel="import" href="literal/bool_literal_box.html" />
+
+<link rel="import" href="rtm/add_port_box.html" />
+<link rel="import" href="rtm/add_inport_box.html" />
+<link rel="import" href="rtm/add_outport_box.html" />
+
+<link rel="import" href="variables/declare_variable_box.html" />
+<link rel="import" href="variables/assign_box.html" />
+<link rel="import" href="variables/refer_variable_box.html" />
