Refactor (use mirrors)

--- a/web/main_menu/boxes/boxes.html
+++ b/web/main_menu/boxes/boxes.html
@@ -1,5 +1,6 @@
 <link rel="import" href="flow_control/if_box.html" />
 <link rel="import" href="flow_control/while_box.html" />
+<link rel="import" href="flow_control/else_box.html" />
 
 <link rel="import" href="dataports/data_port_box.html" />
 <link rel="import" href="dataports/inport_buffer_box.html" />
