--- a/web/main_frame.html
+++ b/web/main_frame.html
@@ -23,7 +23,7 @@
 <link rel="import" href="blocks/outport_buffer_box.html" />
 <link rel="import" href="blocks/true_literal_box.html" />
 <link rel="import" href="blocks/real_literal_box.html" />
-<link rel="import" href="blocks/addition_box.html" />
+<link rel="import" href="blocks/add_box.html" />
 <link rel="import" href="blocks/subtraction_box.html" />
 <link rel="import" href="blocks/multiplication_box.html" />
 <link rel="import" href="blocks/division_box.html" />
