--- a/web/main_menu/boxes/boxes.html
+++ b/web/main_menu/boxes/boxes.html
@@ -11,6 +11,8 @@
 
 <link rel="import" href="literal/integer_literal_box.html" />
 <link rel="import" href="literal/bool_literal_box.html" />
+<link rel="import" href="literal/real_literal_box.html" />
+
 
 <link rel="import" href="rtm/add_port_box.html" />
 <link rel="import" href="rtm/add_inport_box.html" />
@@ -19,3 +21,5 @@
 <link rel="import" href="variables/declare_variable_box.html" />
 <link rel="import" href="variables/assign_box.html" />
 <link rel="import" href="variables/refer_variable_box.html" />
+
+<link rel="import" href="calculation/add_box.html" />
