--- a/web/main_menu/boxes/calculation/add_box.html
+++ b/web/main_menu/boxes/calculation/add_box.html
@@ -1,13 +1,10 @@
 
-<link rel="import" href="packages/polymer_elements/paper_input.html" />
-
-<dom-module id="integer-literal-box">
+<dom-module id="add-box">
     <template>
-
         <style type='text/css'>
             :host {
             }
-            :host > #container {
+            #container {
                 margin-top: 2px;
                 margin-left: 7px;
                 margin-right: 7px;
@@ -18,32 +15,30 @@
 
                 position: relative;
 
-                background-color: #BDE1F0;
+                background-color: #B2EBF2;
                 border: 1px solid #B6B6B6;
                 border-radius: 0.3em;
 
-                height: 40px;
-            }
-            #body {
-                position: relative;
+                height: 50px;
             }
             paper-input {
                 margin-left : 10px;
                 margin-right: 10px;
-
-                --paper-input-container-color: black;
-                --paper-input-container-input-color: black;
-            }
-            paper-input#int-literal-input {
-                width: 70px;
             }
         </style>
 
         <!--Japanese ver.-->
         <div id="container" class="horizontal layout center" on-tap="onClicked">
-            <paper-input id="int-literal-input" value="{{intvarstr}}" on-input="onInputValue" label="整数"></paper-input>
+            <div id="value-left-content"></div>
+            <!-- <paper-input id="value1-input" flex value="{{value_a}}"></paper-input> -->
+            <div end> + </div>
+            <div id="value-right-content"></div>
+            <!-- <paper-input id="value2-input" flex value="{{value_b}}"></paper-input> -->
+
         </div>
 
+
     </template>
-    <script type="application/dart" src="integer_literal_box.dart"></script>
+    <script type="application/dart" src="add_box.dart"></script>
 </dom-module>
+
