--- a/web/main_menu/boxes/literal/real_literal_box.html
+++ b/web/main_menu/boxes/literal/real_literal_box.html
@@ -1,14 +1,13 @@
-<link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/paper_elements/paper_input.html" />
-<link rel="import" href="packages/paper_elements/paper_fab.html" />
 
-<polymer-element name="real-literal-box">
+<link rel="import" href="packages/polymer_elements/paper_input.html" />
+
+<dom-module id="real-literal-box">
     <template>
 
         <style type='text/css'>
             :host {
             }
-            :host > #target {
+            :host > #container {
                 margin-top: 2px;
                 margin-left: 7px;
                 margin-right: 7px;
@@ -31,18 +30,20 @@
             paper-input {
                 margin-left : 10px;
                 margin-right: 10px;
+
+                --paper-input-container-color: black;
+                --paper-input-container-input-color: black;
             }
             paper-input#real-literal-input {
-                width: 30px;
+                width: 70px;
             }
         </style>
 
-        <!--Japanese ver.-->
-        <div id="target" horizontal layout center on-tap="{{onClicked}}">
-            <div>小数:</div>
-            <paper-input id="real-literal-input" value="{{dvaluestr}}"></paper-input>
+        <div id="container" class="horizontal layout center" on-tap="onClicked">
+            <paper-input id="real-literal-input" value="{{realvarstr}}" on-input="onInputValue" label="実数"></paper-input>
         </div>
+
 
     </template>
     <script type="application/dart" src="real_literal_box.dart"></script>
-</polymer-element>
+</dom-module>
