--- a/web/main_menu/boxes/variables/refer_variable_box.html
+++ b/web/main_menu/boxes/variables/refer_variable_box.html
@@ -12,8 +12,21 @@
             }
 
             :host #container {
-              padding-left: 10px;
-                padding-right: 10px;
+                margin-top: 2px;
+                margin-left: 7px;
+                margin-right: 7px;
+                margin-bottom: 1px;
+
+                padding-left: 4px;
+                padding-right: 3px;
+
+                position: relative;
+
+                background-color: #DCEDC8;
+                border: 1px solid #B6B6B6;
+                border-radius: 0.3em;
+
+                height: 50px;
             }
 
             #name-dropdown-menu {
