--- a/web/left_menu/left_menu.html
+++ b/web/left_menu/left_menu.html
@@ -42,9 +42,9 @@
       </collapse-menu>
       <collapse-menu id="calculate_menu" label="計算" state="closed">
           <add-element-button id="calc3" label="足し算" command="Add"></add-element-button>
-          <add-element-button id="calc4" label="引き算" command="subtraction"></add-element-button>
-          <add-element-button id="calc5" label="掛け算" command="multiplication"></add-element-button>
-          <add-element-button id="calc6" label="割り算" command="division"></add-element-button>
+          <add-element-button id="calc4" label="引き算" command="Subtract"></add-element-button>
+          <add-element-button id="calc5" label="掛け算" command="Multiply"></add-element-button>
+          <add-element-button id="calc6" label="割り算" command="Divide"></add-element-button>
       </collapse-menu>
 
       <!--
