--- a/web/main_frame.html
+++ b/web/main_frame.html
@@ -24,9 +24,9 @@
 <link rel="import" href="blocks/true_literal_box.html" />
 <link rel="import" href="blocks/real_literal_box.html" />
 <link rel="import" href="blocks/add_box.html" />
-<link rel="import" href="blocks/subtraction_box.html" />
-<link rel="import" href="blocks/multiplication_box.html" />
-<link rel="import" href="blocks/division_box.html" />
+<link rel="import" href="blocks/subtract_box.html" />
+<link rel="import" href="blocks/multiply_box.html" />
+<link rel="import" href="blocks/divide_box.html" />
 <link rel="import" href="blocks/if_box.html" />
 <link rel="import" href="blocks/else_box.html" />
 <link rel="import" href="blocks/while_box.html" />
