--- a/web/main_menu/boxes/boxes.html
+++ b/web/main_menu/boxes/boxes.html
@@ -23,3 +23,6 @@
 <link rel="import" href="variables/refer_variable_box.html" />
 
 <link rel="import" href="calculation/add_box.html" />
+<link rel="import" href="calculation/subtract_box.html" />
+<link rel="import" href="calculation/multiply_box.html" />
+<link rel="import" href="calculation/divide_box.html" />
