--- a/web/main_menu/boxes/calculation/divide_box.html
+++ b/web/main_menu/boxes/calculation/divide_box.html
@@ -1,9 +1,6 @@
-<link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/core_elements/core_style.html" />
-<link rel="import" href="packages/paper_elements/paper_input.html" />
-<link rel="import" href="packages/paper_elements/paper_fab.html" />
 
-<polymer-element name="multiplication-box">
+
+<dom-module id="divide-box">
     <template>
 
         <style type='text/css'>
@@ -33,17 +30,16 @@
         </style>
 
         <!--Japanese ver.-->
-        <div id="target" horizontal layout center on-tap="{{onClicked}}">
-            <div end>(</div>
+        <div id="target" class="horizontal layout center" on-tap="onClicked">
             <div id="value-left-content"></div>
             <!-- <paper-input id="value1-input" flex value="{{value_a}}"></paper-input> -->
-            <div end> * </div>
+            <div end> / </div>
             <div id="value-right-content"></div>
             <!-- <paper-input id="value2-input" flex value="{{value_b}}"></paper-input> -->
-            <div end>)</div>
+
         </div>
 
     </template>
-    <script type="application/dart" src="multiplication_box.dart"></script>
-</polymer-element>
+    <script type="application/dart" src="divide_box.dart"></script>
+</dom-module>
 
