--- a/web/main_frame.html
+++ b/web/main_frame.html
@@ -522,7 +522,7 @@
 
             <!--LEFT Japanese ver.-->
             <div drawer id="left-collapse-menu" class="vertical layout">
-                <left-menu></left-menu>
+                <left-menu class="fit vertical layout"></left-menu>
             </div>
 
 
