--- a/web/main_menu/boxes/boxes.html
+++ b/web/main_menu/boxes/boxes.html
@@ -26,3 +26,10 @@
 <link rel="import" href="calculation/subtract_box.html" />
 <link rel="import" href="calculation/multiply_box.html" />
 <link rel="import" href="calculation/divide_box.html" />
+
+<link rel="import" href="comparison/equals_box.html" />
+<link rel="import" href="comparison/notequals_box.html" />
+<link rel="import" href="comparison/larger_than_box.html" />
+<link rel="import" href="comparison/larger_than_or_equals_box.html" />
+<link rel="import" href="comparison/smaller_than_box.html" />
+<link rel="import" href="comparison/smaller_than_or_equals_box.html" />
