--- a/web/main_menu/boxes/comparison/notequals_box.html
+++ b/web/main_menu/boxes/comparison/notequals_box.html
@@ -1,8 +1,5 @@
-<link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/core_elements/core_style.html" />
-<link rel="import" href="packages/paper_elements/paper_fab.html" />
 
-<polymer-element name="smaller-than-box">
+<dom-module id="notequals-box">
     <template>
 
         <style type='text/css'>
@@ -28,13 +25,13 @@
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" horizontal layout center on-tap="{{onClicked}}">
+        <div id="container" class="horizontal layout center" on-tap="onClicked">
             <div id="left-content"></div>
-            <div self-center layout end>が</div>
+            <div self-center layout end>と</div>
             <div id="right-content"></div>
-            <div self-center layout end>より小さい</div>
+            <div self-center layout end>は等しくない</div>
         </div>
 
     </template>
-    <script type="application/dart" src="smaller_than_box.dart"></script>
-</polymer-element>
+    <script type="application/dart" src="notequals_box.dart"></script>
+</dom-module>
