Result Panel fixed but not used.

--- a/web/main_frame.html
+++ b/web/main_frame.html
@@ -38,7 +38,7 @@
 <link rel="import" href="blocks/larger_than_or_equals_box.html" />
 <link rel="import" href="blocks/smaller_than_box.html" />
 <link rel="import" href="blocks/smaller_than_or_equals_box.html" />
-<link rel="import" href="blocks/logical_not_box.html" />
+<link rel="import" href="blocks/not_box.html" />
 
 
 
