--- a/web/right_menu/result_panel.html
+++ b/web/right_menu/result_panel.html
@@ -1,7 +1,6 @@
 
-<link rel="import" href="packages/polymer/polymer.html" />
 
-<polymer-element name="result-panel">
+<dom-module id="result-panel">
     <template >
         <style type='text/css'>
             :host {
@@ -16,4 +15,4 @@
         </div> -->
     </template>
     <script type="application/dart" src="result_panel.dart"></script>
-</polymer-element>
+</dom-module>
