--- a/web/main_menu/boxes/boxes.html
+++ b/web/main_menu/boxes/boxes.html
@@ -33,3 +33,5 @@
 <link rel="import" href="comparison/larger_than_or_equals_box.html" />
 <link rel="import" href="comparison/smaller_than_box.html" />
 <link rel="import" href="comparison/smaller_than_or_equals_box.html" />
+
+<link rel="import" href="logic/not_box.html" />
