--- a/web/main_menu/boxes/logic/not_box.html
+++ b/web/main_menu/boxes/logic/not_box.html
@@ -1,8 +1,5 @@
-<link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/core_elements/core_style.html" />
-<link rel="import" href="packages/paper_elements/paper_fab.html" />
 
-<polymer-element name="logical-not-box">
+<dom-module id="not-box">
     <template>
 
         <style type='text/css'>
@@ -35,5 +32,5 @@
         </div>
 
     </template>
-    <script type="application/dart" src="logical_not_box.dart"></script>
-</polymer-element>
+    <script type="application/dart" src="not_box.dart"></script>
+</dom-module>
