--- a/web/main_menu/boxes/dataports/outport_buffer_box.html
+++ b/web/main_menu/boxes/dataports/outport_buffer_box.html
@@ -1,4 +1,3 @@
-<link rel="import" href="data_port_box.html" />
 
 <dom-module id="outport-buffer-box">
 
@@ -7,20 +6,9 @@
             :host {
             }
 
-            #container {
-                margin-top: 2px;
-                margin-left: 7px;
-                margin-right: 7px;
-                margin-bottom: 1px;
-
-                padding-left: 4px;
-                padding-right: 3px;
-
-                background-color: #FFE0B2;
-                border: 1px solid #B6B6B6;
-                border-radius: 0.3em;
-
-                height: 50px;
+            :host > box-container {
+                /* --box-container-background-color: #DCEDC8; */
+                --box-container-background-color: #FFE0B2;
             }
 
             paper-input {
@@ -33,9 +21,9 @@
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" class="horizontal layout center" on-tap="onClicked">
+        <box-container>
             <typed-data-selector id="data-selector" label="出力ポート"></typed-data-selector>
-        </div>
+        </box-container>
 
     </template>
     <script type="application/dart" src="outport_buffer_box.dart"></script>
