--- a/web/main_menu/boxes/boxes.html
+++ b/web/main_menu/boxes/boxes.html
@@ -1,3 +1,11 @@
+<link rel="import" href="box_container.html" />
+
+<link rel="import" href="packages/polymer_elements/paper_item.html" />
+<link rel="import" href="packages/polymer_elements/iron_selector.html" />
+<link rel="import" href="packages/polymer_elements/paper_dropdown_menu.html" />
+<link rel="import" href="packages/polymer_elements/paper_styles.html" />
+<link rel="import" href="packages/polymer_elements/paper_input.html" />
+
 <link rel="import" href="flow_control/if_box.html" />
 <link rel="import" href="flow_control/while_box.html" />
 <link rel="import" href="flow_control/else_box.html" />
