--- a/web/main_menu/boxes/calculation/subtract_box.html
+++ b/web/main_menu/boxes/calculation/subtract_box.html
@@ -5,23 +5,14 @@
         <style type='text/css'>
             :host {
             }
-            :host #container {
-                margin-top: 2px;
-                margin-left: 7px;
-                margin-right: 7px;
-                margin-bottom: 1px;
 
-                padding-left: 4px;
-                padding-right: 3px;
 
-                position: relative;
-
-                background-color: #B2EBF2;
-                border: 1px solid #B6B6B6;
-                border-radius: 0.3em;
-
-                height: 50px;
+            :host > box-container {
+                /* --box-container-background-color: #DCEDC8; */
+                --box-container-background-color: #B2EBF2;
             }
+
+
             paper-input {
                 margin-left : 10px;
                 margin-right: 10px;
@@ -29,12 +20,12 @@
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" class="horizontal layout center" on-tap="onClicked">
+        <box-container>
             <div id="value-left-content"></div>
             <div end> - </div>
             <div id="value-right-content"></div>
 
-        </div>
+        </box-container>
 
     </template>
     <script type="application/dart" src="subtract_box.dart"></script>
