--- a/web/main_menu/boxes/comparison/notequals_box.html
+++ b/web/main_menu/boxes/comparison/notequals_box.html
@@ -5,32 +5,19 @@
         <style type='text/css'>
             :host {
             }
-            #container {
-                margin-top: 2px;
-                margin-left: 7px;
-                margin-right: 7px;
-                margin-bottom: 1px;
-
-                padding-left: 4px;
-                padding-right: 3px;
-
-                position: relative;
-
-                background-color: #B2DFDB;
-                border: 1px solid #B6B6B6;
-                border-radius: 0.3em;
-
-                height: 50px;
+            :host > box-container {
+                /* --box-container-background-color: #DCEDC8; */
+                --box-container-background-color: #B2DFDB;
             }
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" class="horizontal layout center" on-tap="onClicked">
+        <box-container>
             <div id="left-content"></div>
             <div self-center layout end>と</div>
             <div id="right-content"></div>
             <div self-center layout end>は等しくない</div>
-        </div>
+        </box-container>
 
     </template>
     <script type="application/dart" src="notequals_box.dart"></script>
