--- a/web/main_menu/boxes/dataports/write_outport_box.html
+++ b/web/main_menu/boxes/dataports/write_outport_box.html
@@ -1,33 +1,16 @@
-<link rel="import" href="packages/polymer_elements/paper_input.html" />
-
-<link rel="import" href="data_port_box.html" />
 
 <dom-module id="write-outport-box">
     <template>
 
         <style>
             :host {
-                border-width: 1px;
-                border-color: #FFFFFF;
-                border-style: none;
             }
-            :host #container {
-                margin-top: 2px;
-                margin-left: 7px;
-                margin-right: 7px;
-                margin-bottom: 1px;
 
-                padding-left: 4px;
-                padding-right: 3px;
-
-                position: relative;
-
-                background-color: #FFE0B2;
-                border: 1px solid #B6B6B6;
-                border-radius: 0.3em;
-
-                height: 50px;
+            :host > box-container {
+                /* --box-container-background-color: #DCEDC8; */
+                --box-container-background-color: #FFE0B2;
             }
+
             paper-input {
                 margin-left : 10px;
                 margin-right: 10px;
@@ -35,10 +18,10 @@
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" class="horizontal layout center" on-tap="onClicked">
+        <box-container>
             <port-selector id="port-selector" label="出力ポート"></port-selector>
             <div end> にデータを書き込む</div>
-        </div>
+        </box-container>
 
     </template>
     <script type="application/dart" src="write_outport_box.dart"></script>
