--- a/web/main_menu/boxes/literal/real_literal_box.html
+++ b/web/main_menu/boxes/literal/real_literal_box.html
@@ -1,32 +1,12 @@
 
-<link rel="import" href="packages/polymer_elements/paper_input.html" />
-
 <dom-module id="real-literal-box">
     <template>
 
         <style type='text/css'>
-            :host {
+            :host > box-container{
+                --box-container-background-color: #BDE1F0;
             }
-            :host > #container {
-                margin-top: 2px;
-                margin-left: 7px;
-                margin-right: 7px;
-                margin-bottom: 1px;
 
-                padding-left: 4px;
-                padding-right: 3px;
-
-                position: relative;
-
-                background-color: #BDE1F0;
-                border: 1px solid #B6B6B6;
-                border-radius: 0.3em;
-
-                height: 40px;
-            }
-            #body {
-                position: relative;
-            }
             paper-input {
                 margin-left : 10px;
                 margin-right: 10px;
@@ -34,14 +14,15 @@
                 --paper-input-container-color: black;
                 --paper-input-container-input-color: black;
             }
+
             paper-input#real-literal-input {
                 width: 70px;
             }
         </style>
 
-        <div id="container" class="horizontal layout center" on-tap="onClicked">
+        <box-container>
             <paper-input id="real-literal-input" value="{{realvarstr}}" on-input="onInputValue" label="実数"></paper-input>
-        </div>
+        </box-container>
 
 
     </template>
