--- a/web/main_menu/boxes/rtm/add_outport_box.html
+++ b/web/main_menu/boxes/rtm/add_outport_box.html
@@ -1,51 +1,28 @@
-<link rel="import" href="packages/polymer_elements/paper_styles.html" />
-<link rel="import" href="packages/polymer_elements/paper_input.html" />
-<link rel="import" href="packages/polymer_elements/iron_selector.html" />
-<link rel="import" href="packages/polymer_elements/paper_dropdown_menu.html" />
-<link rel="import" href="packages/polymer_elements/paper_item.html" />
-<link rel="import" href="packages/polymer_elements/paper_menu.html" />
-<link rel="import" href="add_port_box.html" />
-
 <dom-module id="add-outport-box">
     <template>
 
         <style>
             :host {
-            }
-            #container {
-                margin-top: 2px;
-                margin-left: 7px;
-                margin-right: 7px;
-                margin-bottom: 1px;
-
-                padding-left: 4px;
-                padding-right: 3px;
-
-                position: relative;
-
-                background-color: #F8BBD0;
-                border: 1px solid #B6B6B6;
-                border-radius: 0.3em;
-
-                height: 50px;
-            }
-            :host > div > paper-input#name-input {
-                width: 70px;
-                min-width: 70px;
+                --box-container-background-color: #F8BBD8;
                 --paper-input-container-color: black;
                 --paper-input-container-input-color: black;
+            }
+
+            :host #name-input {
+                width: 70px;
+                min-width: 70px;
             }
 
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" class="horizontal layout center" on-tap="onClicked">
+        <box-container>
             <div end>出力ポート (</div>
             <paper-input id="name-input" one value="{{port_name}}" label="ポート名" on-input="onNameChanged"></paper-input>
             <div end>:</div>
             <data-type-dropdown id="datatype-dropdown"></data-type-dropdown>
             <div end>)</div>
-        </div>
+        </box-container>
 
     </template>
     <script type="application/dart" src="add_outport_box.dart"></script>
