--- a/web/main_menu/boxes/variables/declare_variable_box.html
+++ b/web/main_menu/boxes/variables/declare_variable_box.html
@@ -1,33 +1,13 @@
-<link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/polymer_elements/paper_input.html" />
-<link rel="import" href="packages/polymer_elements/paper_dropdown_menu.html" />
-<link rel="import" href="packages/polymer_elements/paper_item.html" />
-<link rel="import" href="packages/polymer_elements/iron_selector.html" />
 
 <dom-module id="declare-variable-box">
     <template>
 
         <style type='text/css'>
             :host {
+                --box-container-background-color: #DCEDC8;
+
                 --paper-input-container-input-color: black;
                 --paper-input-container-color: black;
-            }
-            #container {
-                margin-top: 2px;
-                margin-left: 7px;
-                margin-right: 7px;
-                margin-bottom: 1px;
-
-                padding-left: 4px;
-                padding-right: 3px;
-
-                position: relative;
-
-                background-color: #DCEDC8;
-                border: 1px solid #B6B6B6;
-                border-radius: 0.3em;
-
-                height: 50px;
             }
             :host > div > paper-input#name-input {
                 width: 80px;
@@ -39,7 +19,7 @@
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" class="horizontal layout center" on-tap="onClicked">
+        <box-container>
             <div end>変数(</div>
             <paper-input id="name-input" one value="{{varname}}" on-input="onInputName" label="変数名"></paper-input>
             <div end>:</div>
@@ -49,7 +29,7 @@
                 </iron-selector>
             </paper-dropdown-menu>
             <div end>)</div>
-        </div>
+        </box-container>
 
     </template>
     <script type="application/dart" src="declare_variable_box.dart"></script>
