--- a/web/main_menu/boxes/variables/refer_variable_box.html
+++ b/web/main_menu/boxes/variables/refer_variable_box.html
@@ -1,32 +1,12 @@
-<link rel="import" href="packages/polymer/polymer.html" />
-<link rel="import" href="packages/polymer_elements/paper_input.html" />
-<link rel="import" href="packages/polymer_elements/iron_selector.html" />
 
 <dom-module id="refer-variable-box">
     <template>
 
         <style type='text/css'>
             :host {
+                --box-container-background-color: #DCEDC8;
                 --paper-input-container-color: black;
                 --paper-input-container-input-color: black;
-            }
-
-            :host #container {
-                margin-top: 2px;
-                margin-left: 7px;
-                margin-right: 7px;
-                margin-bottom: 1px;
-
-                padding-left: 4px;
-                padding-right: 3px;
-
-                position: relative;
-
-                background-color: #DCEDC8;
-                border: 1px solid #B6B6B6;
-                border-radius: 0.3em;
-
-                height: 50px;
             }
 
             #name-dropdown-menu {
@@ -41,12 +21,12 @@
         </style>
 
         <!--Japanese ver.-->
-        <div id="container" class="horizontal layout center" on-tap="onClicked">
+        <box-container>
             <paper-dropdown-menu id="name-dropdown-menu" label="変数">
                 <iron-selector attr-for-selected="value" id="dropdown" class="dropdown-content">
                 </iron-selector>
             </paper-dropdown-menu>
-        </div>
+        </box-container>
 
     </template>
     <script type="application/dart" src="refer_variable_box.dart"></script>
