--- a/web/main_menu/boxes/box_container.html
+++ b/web/main_menu/boxes/box_container.html
@@ -4,7 +4,7 @@
     <template>
         <style>
 
-            :host #container {
+            :host > #container {
                 margin-top: 2px;
                 margin-left: 7px;
                 margin-right: 7px;
@@ -34,7 +34,7 @@
     <template>
         <style>
 
-            :host #container {
+            :host > #container {
                 margin-top: 2px;
                 margin-left: 7px;
                 margin-right: 7px;
