--- a/web/main_menu/boxes/boxes.html
+++ b/web/main_menu/boxes/boxes.html
@@ -27,7 +27,7 @@
 <link rel="import" href="rtm/add_outport_box.html" />
 
 <link rel="import" href="variables/declare_variable_box.html" />
-<link rel="import" href="variables/assign_box.html" />
+<link rel="import" href="calculation/assign_box.html" />
 <link rel="import" href="variables/refer_variable_box.html" />
 
 <link rel="import" href="calculation/add_box.html" />
